typed-i18n/tests/compile-fail/unsupported_path.stderr
error: unsupported path
 --> tests/compile-fail/unsupported_path.rs:6:14
  |
6 | #[typed_i18n(::builder = "static_str")]
  |              ^
